--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -306,7 +306,7 @@ nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
 nicklist.hidden = off
-nicklist.items = "dervish13,dervish,r"
+nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
 nicklist.separator = on
