--- a/i3status/config
+++ b/i3status/config
@@ -16,7 +16,7 @@ order += "disk /"
 order +="volume master"
 #order +="cpu_temperature 0"
 order += "wireless wlan0"
-order += "ethernet lagg0"
+order += "ethernet em0"
 order +="battery all"
 order += "load"
 order += "tztime local"
@@ -40,7 +40,7 @@ wireless wlan0 {
         format_down = "W: down"
 }
 
-ethernet lagg0 {
+ethernet em0 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip"
         format_down = "E: down"
